complete content, begin spacing and font fixes

--- a/style.css
+++ b/style.css
@@ -24,10 +24,12 @@ h1, h2, h3 {
 h1 {
   font-weight: 700;
   color: white;
+  font-size: 70px;
 }
 h2 {
   font-weight: 700;
   color: #3E3E3E;
+  font-size: 40px;
 }
 h3 {
   font-weight: 600;
@@ -37,7 +39,13 @@ h3 {
 .intro {
   margin: 0 auto;
   padding: 3rem;
-  width: 25%;
+  width: 35%;
+  text-align: center;
+  line-height: 35px;
+}
+.intro p {
+  font-size: 20px;
+  color: #4B4B4B;
 }
 
 /* Components */
@@ -61,9 +69,10 @@ nav ul {
   display: flex;
   list-style: none;
   justify-content: center;
-  font-family: 'Montserrat', sans-serif;
+  font-family: var(--display-font);
   font-weight: 600;
   text-transform: uppercase;
+  font-size: 13px;
 }
 li {
   padding: 1rem;
@@ -71,22 +80,33 @@ li {
 .title {
   align-self: center;
 }
+.title p {
+  font-size: 22px;
+  margin: 42px;
+}
 button {
   text-transform: uppercase;
   background-color: white;
   color: black;
+  text-size: 15px;
+  letter-spacing: 4.2px;
+  height: 45px;
+  margin: 0 15px;
+  padding: 15px 30px;
+  border-radius: 30px;
 }
 button:last-child {
   background-color: var(--brand-color);
   color: white;
+  box-shadow: 0px 10px 20px rgba(101, 52, 255, 0.3);
 }
 address {
   display: flex;
   justify-content: space-between;
-  font-family: 'Montserrat', sans-serif;
+  font-family: var(--display-font);
   font-weight: 400;
   font-style: normal;
-  padding: 2rem;
+  margin: 50px 76px;
 }
 
 /* Portfolio */
@@ -97,9 +117,11 @@ address {
   display: flex;
   list-style: none;
   justify-content: center;
-  font-family: 'Montserrat', sans-serif;
+  font-family: var(--display-font);
   font-weight: 600;
   text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: 2.4px;
   padding-bottom: 1rem;
 }
 .gallery {
@@ -115,7 +137,6 @@ address {
 /* Services */
 .services-wrapper {
   background-color: #222222;
-  
 }
 .services {
   display: grid;
@@ -144,16 +165,125 @@ address {
 .team {
   text-align: center;
 }
-
-/* Testimonials */
-.testimonials {
-  text-align: center;
-}
 .teampics {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
+/* Testimonials */
+.quotesblock {
+  display: grid;
+  grid: auto-flow / 1fr 1fr;
+  gap: 5rem;
+  width: 60%;
+  margin: 0 auto;
+  padding-top: 10rem;
+  padding-bottom: 10rem;
+}
+blockquote {
+  margin: 0;
+}
+.quotename {
+  text-transform: uppercase;
+  font-family: var(--display-font);
+  font-weight: 600;
+}
+.quotetitle {
+  font-style: italic;
+}
+
 /* CTA */
+.cta {
+  text-align: center;
+  background-color: var(--brand-color);
+  height: 253px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.cta h2 {
+  color: white;
+}
+.cta button {
+  background-color: white;
+  color: #222222;
+}
 
 /* Footer */
+footer {
+  background-color: #222222;
+  color: white;
+}
+.footerblock {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  width: 70%;
+  margin: 0 auto;
+  padding-top: 76px;
+  padding-bottom: 76px;
+}
+.summary {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.footernav {
+  list-style: none;
+  text-transform: uppercase;
+  font-family: var(--display-font);
+  font-weight: 400;
+}
+.footernav li {
+  padding: 13px;
+}
+footer address {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+.subscribe {
+  font-size: 20px;
+}
+.visuallyhidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+#email {
+  font-size: 16px;
+  padding: 16px 33px 16px 33px;
+  margin: 0;
+  /* display: inline; */
+  border-radius: 30px 0 0 30px;
+}
+#email::placeholder {
+  color: #8A8A8A;
+  font-family: var(--text-font)
+}
+#emailsubmit {
+  height: 64px;
+  width: 64px;
+  margin: 0;
+  border-radius: 0 30px 30px 0;
+  /* display: inline; */
+}
+#icon {
+  height: 25px;
+  width: 25px;
+  background-color: white;
+  margin: 0 auto;
+}
+.copyright {
+  /* written #525252, pick an accessible color */
+  color: #525252;
+  background-color: #1C1C1C;
+  height: 79px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
